--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -99,6 +99,26 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_IMPACTA }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.qualitygate.wait=true -Dsonar.projectKey=devopsfiap_devopsimpacta
 
+unit-test: 
+ runs-on: ubuntu-latest 
+  
+ steps: 
+ - uses: actions/checkout@v4 
+ with: 
+ fetch-depth: 0 
+  
+ - run: mvn test  
+ - name: Generate JaCoCo Badge 
+ id: jacoco 
+ uses: cicirello/jacoco-badge-generator@v2.11.0 
+ - name: Log coverage percentage 
+ run: | 
+ echo "coverage = ${{ steps.jacoco.outputs.coverage }}" 
+ echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"   - name: Upload JaCoCo coverage report 
+ uses: actions/upload-artifact@v2 
+ with: 
+ name: jacoco-report 
+ path: target/site/jacoco/
 
   build:
     runs-on: ubuntu-latest
