--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 			<plugin>
 				<groupId>org.pitest</groupId>
 				<artifactId>pitest-maven</artifactId>
-				<version>1.14.0</version>
+				<version>LATEST</version>
 				<configuration>
 					<targetClasses>
 						<param>com.example.demo.*</param> <!-- Ajuste para o seu pacote -->
